	  that have been closed (in asSQL()).    	  	  	  	  	  
	  
	- Removed logger autodectection altogether, must now specify logger 
	  explitly if you want to use a logger other than one that logs
	  to STDERR.
	  
    - Fixed BUG#22290 - Driver issues truncation on write exception when
	  it shouldn't (due to sending big decimal incorrectly to server with
	  server-side prepared statement).
	   
05-26-06 - Version 3.1.13

    - Fixed BUG#15464 - INOUT parameter does not store IN value.
    
    - Fixed BUG#14609 - Exception thrown for new decimal type when 
      using updatable result sets.
            
    - Fixed BUG#15544, no "dos" character set in MySQL > 4.1.0
    
    - Fixed BUG#15383 - PreparedStatement.setObject() serializes 
      BigInteger as object, rather than sending as numeric value 
      (and is thus not complementary to .getObject() on an UNSIGNED 
      LONG type).
      
    - Fixed BUG#11874 - ResultSet.getShort() for UNSIGNED TINYINT
      returned wrong values. 
      
    - Fixed BUG#15676 - lib-nodist directory missing from  
      package breaks out-of-box build   
      
    - Fixed BUG#15854 - DBMD.getColumns() returns wrong type for BIT.  
    
    - Fixed BUG#16169 - ResultSet.getNativeShort() causes stack overflow error
      via recurisve calls.
      
    - Fixed BUG#14938 - Unable to initialize character set mapping tables. 
      Removed reliance on .properties files to hold this information, as it
      turns out to be too problematic to code around class loader hierarchies
      that change depending on how an application is deployed. Moved information
      back into the CharsetMapping class.      
      
    - Fixed BUG#16841 - updatable result set doesn't return AUTO_INCREMENT 
      values for insertRow() when multiple column primary keys are used. (the
      driver was checking for the existence of single-column primary keys and
      an autoincrement value > 0 instead of a straightforward isAutoIncrement() 